Update wallet model to use UUIDs and fix test compatibility